[package]
name = "ai-assist"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
chrono = "0.4"
meval = "0.2"