[package]
name = "ai-assist"
version = "0.1.4"
edition = "2024"
description = "Terminal assistant based on large language models with support for built-in and external tools"
authors = ["Serg Nikolaev <s.nikolaev@nklv.su>"]
license = "MIT"
repository = "https://github.com/svnikolaev/ai-assist.git"

[dependencies]
anyhow = "1.0"
bytemuck = "1.14"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
meval = "0.2"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
toml = "0.8"
turso = { git = "https://github.com/tursodatabase/turso" }

[dev-dependencies]
tempfile = "3"